[package]
name = "aoide-jsonapi-sqlite"
version = "0.0.0"
license = "AGPL-3.0-or-later"
publish = false
edition = "2021"

[dependencies]
anyhow = "*"
serde = "*"
thiserror = "*"
tracing = { version = "*", features = ["log"] }
url = "*"
uuid = { version = "*", features = ["v4"] }

# Workspace dependencies
aoide-core = "*"
aoide-core-ext = "*"
aoide-core-serde = "*"
aoide-core-ext-serde = "*"
aoide-media = "*"
aoide-repo = "*"
aoide-repo-sqlite = "*"
aoide-usecases = "*"
aoide-usecases-sqlite = "*"

[features]
default = []
