# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-media-file"
description = "aoide - File-based import/export of metadata for media sources and tracks"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3 = { version = "1.5.5", features = ["traits-preview"] }
bitflags.workspace = true
bytes = "1.10.0"
data-encoding.workspace = true
digest.workspace = true
image = { workspace = true, features = ["default-formats"] }
kmeans_colors = { version = "0.6.0", default-features = false, features = ["palette_color"] }
lofty = "0.22.1"
# Use main branch of lofty-rs for testing unreleased features.
#lofty = { git = "https://github.com/Serial-ATA/lofty-rs", branch = "main" }
log.workspace = true
mime.workspace = true
mime_guess = "2.0.5"
nom = "8.0.0"
nonicle.workspace = true
num-traits = "0.2.19"
palette = { version = "0.7.6", default-features = false }
semval.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["parsing"] }
url.workspace = true
walkdir = "2.5.0"

# Dependencies (optional): gigtag
gigtag = { version = "0.2.3", optional = true }
compact_str = { version = "0.8.1", optional = true }

# Dependencies (optional): serato-markers
triseratops = { version = "0.0.3", optional = true }

# Workspace dependencies
aoide-core.workspace = true

[dev-dependencies]
tempfile = "3.16.0"

[features]
default = ["all"]
all = ["gigtag", "serato-markers"]
gigtag = ["dep:gigtag", "dep:compact_str"]
serato-markers = ["dep:triseratops"]
