# SPDX-FileCopyrightText: Copyright (C) 2018-2025 Uwe Klotz <uwedotklotzatgmaildotcom> et al.
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "aoide-media-file"
description = "aoide - File-based import/export of metadata for media sources and tracks"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
data-encoding.workspace = true
digest.workspace = true
image.workspace = true
itertools.workspace = true
jiff.workspace = true
#lofty = "0.23.0"
# Use main branch of lofty-rs for testing unreleased features.
lofty = { git = "https://github.com/Serial-ATA/lofty-rs", branch = "main" }
log.workspace = true
mime.workspace = true
mime_guess = "2.0.5"
nom = "8.0.0"
nonicle.workspace = true
num-traits = "0.2.19"
semval.workspace = true
smol_str.workspace = true
thiserror.workspace = true
# TODO: Remove time dependency.
time = { version = "0.3.44", features = ["formatting"] }
url.workspace = true
walkdir.workspace = true

# Dependencies (optional): gigtag
gigtag = { version = "0.4.1", features = ["smol_str"], optional = true }

# Dependencies (optional): serato-markers
triseratops = { version = "0.0.3", optional = true }

# Workspace dependencies
aoide-core.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = ["all"]
all = ["gigtag", "serato-markers"]
gigtag = ["dep:gigtag"]
serato-markers = ["dep:triseratops"]
